[gd_scene load_steps=4 format=3 uid="uid://b5a6yyay81ru4"]

[ext_resource type="Script" path="res://Scenes/SceneHelpers/3DHUD.gd" id="1_6yrk0"]

[sub_resource type="QuadMesh" id="QuadMesh_q2y10"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7l1vu"]
transparency = 1
albedo_color = Color(0, 0, 0, 0)

[node name="HUD" type="Node3D"]
script = ExtResource("1_6yrk0")

[node name="ScoreLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.517774, 0.264936, -0.798309)
text = "Score:"
font_size = 16
outline_size = 8
horizontal_alignment = 0

[node name="ComboLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0990934, 0.131022, -0.798215)
ignore_occlusion_culling = true
text = "COMBO"
font_size = 16
outline_size = 8
vertical_alignment = 0
autowrap_mode = 3
width = 200.0

[node name="ComboScore" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.110189, 0.168337, -0.798217)
modulate = Color(0.980392, 0.619608, 0.215686, 1)
text = "100"
font_size = 16
outline_size = 8

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.256026)
mesh = SubResource("QuadMesh_q2y10")
surface_material_override/0 = SubResource("StandardMaterial3D_7l1vu")
